=head1 NAME

Net::Statsd::Server::Changes - Change history for Net::Statsd::Server

=head2 Changes in Net::Statsd::Server 0.16    6th May 2014

  Implemented new timer attributes: count_ps, median, sum_squares.

Release of 0.15 never happened.

=head2 Changes in Net::Statsd::Server 0.14   25th April 2014

  Fixed problem with gauges that were erroneously deleted either
    when deleteIdleStats was false, or deleteIdleStats was true
    but deleteGauges was false.

=head2 Changes in Net::Statsd::Server 0.13   26th January 2014

  Added support for Perl 5.8, so now Net::Statsd::Server should
    in theory work on 5.8 too, thanks to RJBS for the related patch.
    RJBS also reported N::S::S to work on Solaris.

  Fixed RT#85165, now the code is indicated as Perl_5 licence.
    Problem there was my failed understanding of the interaction
    between hardcoded Makefile.PL and dzil.

=head2 Changes in Net::Statsd::Server 0.12  16th December 2013

  Fixed (hopefully) problems reported by CPAN testers:
    * Failing to setsockopt(SO_RCVBUF) is no more a fatal exception.
      We will just continue and emit a warning instead.
    * Some CPAN testers appear to have a running graphite on their
      systems, so use a not so common port instead of 2003.

=head2 Changes in Net::Statsd::Server 0.11  13th December 2013

  Added implementation for the following configuration directives:
    deleteIdleStats, deleteGauges, deleteSets, prefixStats.
    Both deleteTimers and deleteCounters were supposed to work
    before 0.11 too.

  Improved documentation. Should be clear now how to know what
    options are actually supported and what options are not.

  Improved integration tests. Now it's even easier to run
    Net::Statsd::Server integration tests against the nodejs
    version of statsd to verify full compatibility.

=head2 Changes in Net::Statsd::Server 0.10  10th February 2013

  Fixed SO_RCVBUF on Mac OS X, where it's apparently not possible