@@ -44,6 +44,6 @@
          "web" : "http://github.com/cosimo/perl5-net-statsd-server"
       }
    },
-   "version" : "0.16"
+   "version" : "0.17"
 }
 
