@@ -1,7 +1,7 @@
 
 
 This archive contains the distribution Net-Statsd-Server,
-version 0.16:
+version 0.17:
 
   a Perl port of Etsy's statsd *server*
 
